--- a/blog_app/app/assets/stylesheets/application.css
+++ b/blog_app/app/assets/stylesheets/application.css
@@ -7,6 +7,19 @@
  * Based on Bootstrap
 */
 /*! normalize.css v3.0.1 | MIT License | git.io/normalize */
+.tags {
+  margin-top: 5px;
+  width: 200px;
+  height: 30px;
+}
+.tagbox {
+  margin-top: 20px;
+}
+
+.delete {
+  position: relative;
+  top: 50px;
+}
 html {
   font-family: sans-serif;
   -ms-text-size-adjust: 100%;
