--- a/blog_app/app/views/posts/index.html.erb
+++ b/blog_app/app/views/posts/index.html.erb
@@ -1,8 +1,8 @@
 <% @posts.each do |post| %>
 <div class="col-xs-3 headlines show-all-posts"><h4 class="headlines-title"><a href="posts/<%= post.id %>"><%= post.title %></a></h4>
-    <h6><%= post.author %></h6>
-<!--     <p><strong><%= post.comments.length %></strong></p>
- -->    <p><%= post.created_at.in_time_zone('Pacific Time (US & Canada)').strftime(" %B %d, %Y %I:%M %p") %></p>
+  <h6><%= post.author %></h6>
+  <p><a href="posts/<%= post.id %>/comments"><strong><%= post.comments.length %> comments</strong></a></p>
+  <p><%= post.created_at.in_time_zone('Pacific Time (US & Canada)').strftime(" %B %d, %Y %I:%M %p") %></p>
     <div class="divider"></div>
     <p><%= post.description %></p>
   </div>
