--- a/blog_app/app/views/posts/show.html.erb
+++ b/blog_app/app/views/posts/show.html.erb
@@ -1,18 +1,24 @@
-<div class="col-xs-3 headlines show-all-posts">
+<div class="col-xs-3 headlines tags-box show-all-posts">
 <% @post.tags.each do |tag| %>
-  <button class="tags"><%= tag.name %></button>
+  <a href="/tags/<%= tag.id %>"><button class="tags"><%= tag.name %></button></a>
 <% end %>
 
 </div>
-  <div class="col-xs-3 headlines show-all-posts"><h4 class="headlines-title"><a href="posts/<%= @post.id %>"><%= @post.title %></a></h4>
+  <div class="col-xs-3 headlines show-page show-all-posts"><h4 class="headlines-title"><%= @post.title %></h4>
     <h6><%= @post.author %></h6>
     <div class="divider"></div>
     <p><%= @post.description %></p>
 
-<a href="<%= @post.id %>/edit"><button>Edit</button></a><form class="delete" method="post" action="/posts/<%= @post.id %>">
+<a href="<%= @post.id %>/edit"><button class="btn-default">Edit</button></a><form class="delete" method="post" action="/posts/<%= @post.id %>">
   <input name="_method" type="hidden" value="delete" />
-  <button>Delete Post</button>
+  <button class="btn-danger delete-button">Delete Post</button>
   <%= token_tag form_authenticity_token %>
 </form>
+<a href="<%= @post.id %>/comments/new"><button class="btn-primary">Make a Post</button></a>
+<% @post.comments.each do |comment| %>
+  <h5 class="showheader"><%= comment.name %></h5>
+  <p><%= comment.body %></p>
+  <a href="<%= @post.id %>/comments/<%= comment.id %>">Continue reading...</a>
+  <% end %>
 </div>
 </div>
